# sea_battle

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.dev.yml  pyproject.toml
compose/: Dockerfile
src/api/: main.py
src/api/di/: db.py  redis.py  services.py  user.py
src/api/di/providers/: services.py
src/api/routes/: __init__.py  game.py  sea_battle.py  user.py
src/api/ws/managers/: redis.py  sea_battle.py
src/api/ws/routes/: sea_battle_ws .py  sea_battle_ws.py
src/common/: config.py
src/consumers/: sea_battle.py
src/core/: config.py
src/core/dto/: game.py  user.py
src/core/services/: board.py  user.py  ws.py  ws_game.py
src/core/utils/: game_utils.py  ship.py
src/domain/common/exceptions/: base.py
src/domain/game/dto/: game.py
src/domain/game/exceptions/: __init__.py  user.py
src/domain/game/interfaces/: __init__.py
src/domain/game/usecases/: game.py
src/domain/lobby/dto/: __init__.py  game.py  user.py
src/domain/lobby/enums/: statuses.py
src/domain/lobby/exceptions/: __init__.py  game.py
src/domain/lobby/interfaces/: __init__.py  game.py
src/domain/lobby/usecases/: __init__.py  game.py
src/domain/user/: schemas.py
src/domain/user/dto/: user.py
src/domain/user/interfaces/: __init__.py  manager.py  user.py
src/domain/user/usecases/: user.py
src/dto/: game.py
src/infrastructure/db/: main.py  uow.py
src/models/: game.py  user.py
src/services/: board.py
src/utils/: ship.py
src/ws/managers/: redis.py  sea_battle.py
src/ws/routes/: sea_battle_ws .py
(+8 files in other folders)
