[tool.poetry]
name = "fastapi-sea-battle"
version = "0.1.0"
description = "My first project with FastAPI!"
authors = ["edpyt <edrsa1321s@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
in-project = true