[tool.poetry]
name = "fastapi-sea-battle"
version = "0.1.0"
description = ""
authors = ["edpyt <edrsa1321s@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
motor = "^3.3.1"
pydantic-settings = "^2.0.3"
beanie = "^1.23.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
